--- a/开发指南.md
+++ b/开发指南.md
@@ -1,946 +1,11 @@
-# 墨阁 (Moge) 功能规划备忘录
+# 墨阁 (Moge) 开发文档
 
-本文档旨在沉淀和梳理"墨阁"应用未来的功能规划与设计思路，作为后续开发的统一参考。
+本文档已拆分为更精细的模块，存放于 `docs` 目录下。
 
----
+- **[开发规范](./docs/development-standards.md)**: 核心开发规则、代码规范、AI协作规范及示例。
+- **[开发指南](./docs/development-guide.md)**: 核心架构决策与实施策略。
+- **[产品规划](./docs/product-plan.md)**: 未来的核心功能模块规划。
+- **[核心功能](./docs/core-features.md)**: 应用当前已实现的核心功能。
+- **[菜单结构](./docs/menu-structure.md)**: 应用的侧边栏菜单结构。
 
-## 第一部分：AI开发规范
-
-为确保代码质量和开发一致性，制定以下AI开发规范：
-
-### 项目架构说明
-
-本项目采用 **Monorepo 架构**，统一管理多个相关包：
-
-- 📁 **apps/frontend** - Next.js前端应用，基于React 18 + TypeScript
-- 📁 **apps/backend** - NestJS后端API服务，基于Node.js + TypeScript
-- 📁 **packages/types** - 全局共享类型定义和Zod schema验证
-- 📦 **包管理器**: 使用pnpm作为唯一包管理工具
-- 🔧 **依赖管理**: 所有依赖版本通过`pnpm-workspace.yaml`统一管理
-- 📋 **版本策略**: 子项目使用`catalog:`占位符引用workspace统一版本
-
-**核心命令**：
-
-```bash
-# 根目录安装所有依赖
-pnpm install
-
-# 在特定workspace运行命令
-pnpm --filter @moge/frontend dev
-pnpm --filter @moge/backend dev
-
-# 全局命令（在根目录）
-pnpm run dev        # 启动所有服务
-pnpm run build      # 构建所有项目
-pnpm run lint       # 检查所有代码
-pnpm run typecheck  # 类型检查所有项目
-```
-
-### 核心开发规则
-
-1. **依赖管理规范**：
-   - 📦 **唯一包管理器**：必须使用pnpm，禁用npm/yarn
-   - 🏢 **Workspace统一**：所有依赖版本在`pnpm-workspace.yaml`中统一管理
-   - 🔖 **Catalog引用**：子项目package.json中使用`"dependency": "catalog:"`占位符
-   - ⚠️ **禁止直接版本**：禁止在子项目中直接指定具体版本号
-   - 🚫 **禁止重复安装**：不在子目录单独运行`pnpm install`
-
-2. **Toast通知规范**：
-   - ✅ **保留成功通知**：业务操作成功时使用 `toast.success()` 显示成功提示
-   - ❌ **删除错误通知**：所有HTTP错误由 `request/index.ts` 全局处理，业务代码不应手动添加错误toast
-   - 📝 **异常处理**：catch块中只保留 `console.error()` 用于调试，不显示用户错误提示
-
-3. **代码质量检查**：
-   - 🔧 **必须执行**：每次代码修改后在根目录执行 `pnpm run lint` 和 `pnpm run typecheck`
-   - ✅ **通过标准**：代码必须通过所有lint和类型检查，无警告无错误
-   - 🚫 **禁止提交**：有lint或类型错误的代码不得提交,不需要执行 `git` 相关操作
-
-4. **注释与文档**：
-   - 🈯 **中文注释**：所有代码注释必须使用中文，便于团队理解
-   - 📖 **注释原则**：注释应解释"为什么"而不是"是什么"
-   - 🚫 **避免无用注释**：禁止添加"简化版"、"直接使用XX"等无意义的状态描述注释
-   - 🔤 **英文保留**：仅在技术术语、API名称等必要场景保留英文
-   - 📝 **JSDoc标准**：公共函数、Service方法、API接口必须使用JSDoc格式
-   - 🏷️ **分层注释**：核心层用完整JSDoc，业务层用简化JSDoc，实现层用行内注释
-   - 🧠 **逻辑注释**：函数内部只有逻辑稍微复杂的地方才需要增加简单的中文注释
-   - 📋 **必备要素**：JSDoc须包含功能描述、参数说明、返回值说明、异常情况（如适用）
-   - 💬 **Props注释**：接口（Interface）或类型（Type）的字段应使用内联注释（`//`）说明其用途，尤其是在表单、对话框等复杂组件中。
-
-5. **TypeScript类型规范**：
-   - 🚫 **禁用 as any**：严禁使用 `as any` 绕过类型检查
-   - ⚠️ **谨慎使用 unknown**：类型确实无法确定时可使用 `unknown`，但需添加类型保护
-   - ✅ **类型安全**：优先使用精确的类型定义，必要时创建新的接口或类型别名
-   - 🛡️ **类型保护**：使用类型守卫函数确保运行时类型安全
-   - 📦 **共享类型**：全局类型定义统一放在`packages/types`中
-
-6. **错误处理模式**：
-   - 🎯 **统一处理**：依赖全局错误处理机制，避免重复的错误处理逻辑
-   - 📝 **日志记录**：保留console.error用于开发调试和问题追踪
-   - 🔄 **优雅降级**：确保错误不会导致页面崩溃，提供合理的备用方案
-
-7. **AI协作规范**：
-   - 🤖 **中文交流**：AI助手必须使用中文进行沟通和代码注释
-   - 📋 **简洁回复**：回复要简洁直接，避免冗长的解释和总结，除非用户要求回答详细
-   - 🎯 **任务导向**：专注解决具体问题，不进行不必要的扩展说明
-   - 💡 **主动建议**：在发现代码问题时主动提出改进建议
-   - ⚡ **快速响应**：优先快速解决问题，避免过度分析
-
-8. **代码风格一致性**：
-   - 🔍 **风格分析**：生成代码前先分析项目现有代码风格和模式
-   - 📏 **格式统一**：遵循项目的缩进、命名、函数结构等风格规范
-   - 🏗️ **架构一致**：使用项目既定的架构模式（如Prisma查询方式、错误处理模式等）
-   - 🔄 **API设计**：保持与现有API接口设计的一致性
-   - 📚 **依赖管理**：使用项目已有的库和工具，避免引入新的重复依赖
-
-### 示例对比
-
-**❌ 错误做法**：
-
-```typescript
-// 错误的错误处理
-try {
-  await apiCall();
-} catch (error: any) {
-  toast.error('操作失败'); // 重复的错误处理
-  console.log(error); // 英文日志
-}
-```
-
-```json
-// 错误的依赖管理 - 子项目package.json
-{
-  "dependencies": {
-    "react": "^18.2.0", // ❌ 直接指定版本
-    "next": "14.0.0" // ❌ 直接指定版本
-  }
-}
-```
-
-```typescript
-// 错误的AI协作示例
-// This function handles user authentication
-function handleAuth() {
-  // TODO: implement this later
-  return true;
-}
-// ❌ 英文注释，缺乏具体实现指导
-```
-
-```typescript
-// 错误的代码风格示例 - 不一致的架构模式
-async getStatistics() {
-  // ❌ 使用原始SQL而非项目的Prisma风格
-  return this.prisma.$queryRaw`
-    SELECT "categoryCode", COUNT(*) as count
-    FROM "dict_items" GROUP BY "categoryCode"
-  `;
-}
-```
-
-**✅ 正确做法**：
-
-```typescript
-// 正确的错误处理
-try {
-  await apiCall();
-  toast.success('操作成功'); // 只保留成功提示
-} catch (error) {
-  console.error('操作失败:', error); // 中文日志，全局错误处理
-}
-```
-
-```json
-// 正确的依赖管理 - 子项目package.json
-{
-  "dependencies": {
-    "react": "catalog:", // ✅ 使用catalog占位符
-    "next": "catalog:" // ✅ 统一版本管理
-  }
-}
-```
-
-```typescript
-// 正确的AI协作示例
-/**
- * 处理用户认证逻辑
- * 验证JWT token有效性并返回用户信息
- */
-async function handleAuth(token: string): Promise<UserInfo | null> {
-  // 使用JWT验证库检查token有效性
-  const decoded = await verifyToken(token);
-  return decoded ? decoded.user : null;
-}
-// ✅ 中文注释，具体实现，明确返回类型
-```
-
-```typescript
-// 正确的代码风格示例 - 遵循项目Prisma风格
-async getStatistics(): Promise<{ categoryCode: string; count: number }[]> {
-  // ✅ 使用Prisma标准API，与项目其他方法保持一致
-  const results = await this.prisma.dict_items.groupBy({
-    by: ['categoryCode'],
-    _count: { id: true },
-    orderBy: { categoryCode: 'asc' },
-  });
-
-  return results.map((result) => ({
-    categoryCode: result.categoryCode,
-    count: result._count.id,
-  }));
-}
-```
-
-```yaml
-# pnpm-workspace.yaml - 统一版本管理
-packages:
-  - 'apps/*'
-  - 'packages/*'
-
-catalog:
-  react: ^18.2.0
-  next: 14.0.0
-  typescript: ^5.0.0
-```
-
----
-
-## 第二部分：核心功能现状
-
-应用目前已具备稳定可靠的核心功能：
-
-1.  **用户系统**:
-    - 支持账号密码注册与登录。
-    - 支持 GitLab 第三方授权登录。
-    - 提供个人中心，可修改个人资料与密码。
-
-2.  **大纲管理**:
-    - 支持大纲的创建、编辑、删除和列表展示。
-    - 支持多维度筛选（名称、类型、时代、标签等）与排序。
-    - 具备核心的 **AI 流式生成** 大纲内容的能力。
-    - 提供基于 Markdown 的结构化内容查看与编辑功能。
-
-3.  **基础体验**:
-    - 支持明/暗两种主题模式。
-    - 支持中/英双语切换。
-
----
-
-## 第三部分：新版菜单结构
-
-为支撑未来的功能扩展，我们已确定并实施了新的侧边栏菜单结构：
-
-- **`工作台` (Workspace)**: `href: /workspace`
-  - **定位**: 应用的仪表盘和启动页，提供信息概览和快捷入口。
-- **`大纲` (Outlines)**: `href: /outline`
-  - **定位**: 核心的灵感构思与故事结构设计中心。
-- **`文稿` (Manuscripts)**: `href: /manuscripts`
-  - **定位**: 基于大纲进行具体章节内容创作的管理中心。
-- **`设定集` (Settings)**: `href: /settings`
-  - **定位**: 创作所需的一切背景设定的"专属维基百科"，包括角色、系统、世界观等。
-- **`字典管理` (Dictionary)**: `href: /dictionary`
-  - **定位**: 全局数据字典和基础配置管理中心，维护系统级的标准化数据。
-- **`统计` (Analytics)**: `href: /stats`
-  - **定位**: 对创作过程进行数据化复盘与分析的工具。
-
----
-
-## 第四部分：未来功能详细规划
-
-### 1. `工作台` (/workspace) 模块
-
-- **欢迎与快速入口**: 显示个性化问候，并提供“新建大纲”、“新建文稿”等核心操作的快捷按钮。
-- **最近项目**: 以列表形式展示最近编辑过的文档（大纲、章节、设定），方便快速投入工作。
-- **统计概览**: 以卡片和微图表形式，展示“今日字数”、“本周动态”等关键数据，作为“统计”页面的精简版。
-- **创作目标/待办清单**: 提供一个简易的 To-Do List，帮助作者管理每日写作计划。
-- **灵感便签**: 一个用于随手记录零散想法的区域。
-
-### 2. `文稿` (/manuscripts) 模块
-
-- **文稿列表**: 集中展示所有“小说项目”。
-- **状态管理**: 支持按“进行中”、“已完结”、“构思中”等状态对小说项目进行筛选和管理。
-- **章节组织**: 在每个文稿内部，提供创建、排序和管理章节的能力。
-
-### 3. `设定集` (/settings) 模块 ✅ **核心组件已完成**
-
-#### 界面架构设计
-
-**首页设计** (`/settings`) ✅ **已完成**
-
-设定集首页展示小说项目列表，支持以下功能：
-
-- **项目卡片展示**: 以卡片形式展示所有已创建的小说项目
-- **项目信息**: 每个卡片显示小说名称、类型、创建时间、关联设定统计
-- **设定统计**: 显示各类设定数量（角色X个、系统X个、世界X个、辅助X个）
-- **设定库入口**: 提供"设定库"按钮，跳转到独立设定管理页面
-- **新建项目**: 提供"创建新小说项目"按钮，弹窗式创建 ✅ **已完成并修复循环错误**
-- **筛选与搜索**: 支持按类型筛选、名称搜索、时间排序
-- **视图模式**: 支持列表视图和网格视图切换
-- **空状态处理**: 无项目时显示引导创建界面
-
-**设定分类页** (`/settings/[projectId]`)
-
-- **面包屑导航**: 显示 "设定集 > [项目名称]"
-- **项目信息头部**: 显示项目详细信息和总设定数量
-- **设定分类卡片**: 4个主要分类的大卡片展示
-  - 角色设定 (`/settings/[projectId]/characters`)
-  - 系统/金手指 (`/settings/[projectId]/systems`)
-  - 世界背景 (`/settings/[projectId]/worlds`)
-  - 辅助设定 (`/settings/[projectId]/misc`)
-- **卡片内容**: 每个卡片显示该分类的设定数量和最近更新信息
-- **快捷操作**: 每个卡片提供"新建"和"查看全部"操作
-
-**独立设定库** (`/settings/library`)
-
-为避免强耦合，提供独立的设定管理系统，采用分层架构：
-
-**设定库首页** (`/settings/library`)
-
-- **分类统计**: 展示四大设定分类的统计卡片（角色、系统、世界、辅助）
-- **数量展示**: 显示每类设定的数量和简要描述
-- **快捷入口**: 点击卡片进入对应分类的设定列表
-- **总数概览**: 显示所有设定的总数量
-
-**分类设定列表** (`/settings/library/[category]`) ✅ **已完成数据对接**
-
-- `/settings/library/characters` - 角色设定列表 ✅ **已完成**
-- `/settings/library/systems` - 系统设定列表
-- `/settings/library/worlds` - 世界设定列表
-- `/settings/library/misc` - 辅助设定列表
-
-每个分类页面包含：
-
-- **分类标题**: 显示分类图标、名称和描述
-- **筛选功能**: 支持按标签、搜索等多维度筛选
-- **搜索功能**: 支持设定名称和描述的全文搜索
-- **视图模式**: 支持列表视图和网格视图
-- **项目关联**: 显示每个设定关联的项目数量
-- **批量操作**: 支持批量编辑、删除和项目关联操作
-- **新建功能**: 角色设定已支持完整的创建弹框 ✅ **已对接API**
-- **编辑功能**: ✅ **已完成** - 点击编辑按钮打开对话框，支持修改所有字段
-- **删除功能**: ✅ **已完成** - 带确认提示，后端检查项目关联
-- **操作按钮**: ✅ **已统一风格** - 独立图标按钮（查看关联、编辑、删除）
-
-**项目创建弹框** (`ProjectDialog` - ✅ **已完成并升级**)
-
-已实现完整的项目创建/编辑弹框，包含：
-
-- **基础信息**: 项目名称、类型、描述等必填字段
-- **项目类型**: 13种预设类型（玄幻、仙侠、都市、历史、科幻、武侠、军事、游戏、竞技、悬疑、轻小说、短篇、其他）
-- **设定库关联**: ✅ **新增功能** - 支持从设定库选择关联设定
-  - 角色设定多选：从设定库角色列表中选择相关角色（最多50个）
-  - 系统设定多选：从设定库系统列表中选择相关系统（最多20个）
-  - 世界设定多选：从设定库世界列表中选择相关世界（最多10个）
-  - 辅助设定多选：从设定库辅助列表中选择相关辅助设定（最多30个）
-- **动态数据加载**: 对话框打开时自动从后端API获取最新的设定库数据
-- **多选组件**: ✅ **新增组件** - `MogeMultiSelect` 多选下拉组件
-  - 支持搜索过滤、标签展示、批量选择和清除
-  - 显示设定描述信息，便于用户选择
-  - 加载状态和空状态处理
-  - 最多显示3个选中标签，超出显示计数
-- **表单验证**: 使用Zod进行完整的数据验证
-- **性能优化**: 修复了defaultValues不稳定引用导致的无限循环问题
-- **API集成**: ✅ **新增API** - `settings.api.ts` 设定库数据接口
-  - `getSettingsLibrary()`: 并行获取四类设定数据
-  - `getSettingsByCategory()`: 按分类获取设定数据
-  - 完整的错误处理和降级机制
-- **技术实现**:
-  - 使用静态常量EMPTY_DEFAULT_VALUES避免重复创建对象
-  - 正确保留form依赖项，遵循React Hooks规则
-  - useMemo优化字段配置数组稳定性
-  - useCallback包装提交函数确保引用稳定性
-  - 支持section分组，将设定库关联字段独立分组显示
-
-**角色设定弹框** (`CharacterDialog` - ✅ **已完成并对接API**)
-
-已实现完整的角色设定创建/编辑弹框，包含：
-
-- **基础信息**: 角色名称、类型、性别、年龄等必填字段
-- **外貌特征**: 身高、外貌描述等可选字段
-- **性格背景**: 性格特点、出身背景、职业身份等
-- **能力设定**: 实力等级、特殊能力等
-- **角色关系**: 支持添加多个关系，包含关联角色、关系类型、关系描述
-- **关联角色**: 既可选择现有角色，也可自定义输入任意角色名称，不强制关联角色表
-- **关系类型**: 分为家庭关系、社会关系、情感关系三大类，支持自定义关系类型
-- **自定义关系**: 选择"自定义..."时，显示额外输入框允许用户输入任意关系类型
-- **自定义角色**: 选择"自定义角色..."时，显示输入框允许用户输入任意角色名称
-- **标签系统**: 支持自定义标签便于分类和搜索
-- **备注字段**: 使用 `remarks` 字段存储额外备注信息
-- **表单验证**: 使用Zod进行完整的数据验证
-- **字段映射**: ✅ **已修复** - 前后端字段完全对齐
-  - 删除了前端不存在的 `specialMarks` 字段
-  - 统一使用数据库的 `remarks` 字段（复数形式）
-  - 所有字段与 Prisma schema 严格对应
-- **API对接**: ✅ **已完成**
-  - 创建角色: 调用 `createCharacter` API，成功后显示提示并刷新列表
-  - 编辑角色: 调用 `updateCharacter` API，支持修改所有字段
-  - 对话框关闭时自动刷新列表数据
-  - 完整的错误处理和成功提示
-- **UI交互**: ✅ **已完善**
-  - 新增按钮正常显示，点击打开创建对话框
-  - 编辑按钮正确触发编辑对话框并预填数据
-  - 删除操作带确认提示和项目关联检查
-- **性能优化**:
-  - 使用useCallback包装关系管理函数确保引用稳定性
-  - useMemo缓存关系渲染区域避免重复计算
-  - 函数式setState避免对当前状态值的依赖
-  - 完整的中文JSDoc注释说明
-
-**代码质量与维护性提升** ✅ **已完成并升级**
-
-- **中文注释规范**: 为settings目录下所有函数添加了完整的中文JSDoc注释
-- **函数文档化**: 包含功能描述、参数说明、返回值说明
-- **性能优化**: 修复了多个组件的无限渲染循环问题
-- **类型安全**: 完整的TypeScript类型定义和验证
-- **错误处理**: 统一的错误处理机制，移除冗余的错误提示
-- **组件复用**: 使用MogeFormDialog等现有组件确保UI一致性
-- **新增组件**: ✅ **MogeMultiSelect多选组件** - 通用的多选下拉组件
-  - 支持搜索过滤、标签展示、批量选择操作
-  - 完整的加载状态、空状态和错误处理
-  - 响应式设计，桌面端和移动端自适应
-  - 符合项目UI设计规范和交互模式
-- **API架构完善**: ✅ **新增settings.api.ts** - 设定库数据接口
-  - 统一的数据获取入口，支持并行和单独请求
-  - 完整的TypeScript类型定义和接口文档
-  - 错误处理和数据降级机制
-  - 符合项目request架构规范
-- **表单组件升级**: ✅ **MogeFormDialog支持section分组**
-  - 支持字段分组显示，便于复杂表单的组织
-  - 保持向下兼容，不影响现有表单使用
-  - 完整的类型安全和性能优化
-
-**后端API实现** ✅ **已完成并扩展**
-
-设定库后端API已完整实现，提供以下接口：
-
-**设定库查询接口（用于项目创建时选择）**：
-
-- **角色设定库**: `GET /settings/characters/library` - 获取当前用户的所有角色设定
-- **系统设定库**: `GET /settings/systems/library` - 获取当前用户的所有系统设定
-- **世界设定库**: `GET /settings/worlds/library` - 获取当前用户的所有世界设定
-- **辅助设定库**: `GET /settings/misc/library` - 获取当前用户的所有辅助设定
-
-**角色设定CRUD接口** ✅ **新增完成**：
-
-- **创建角色**: `POST /settings/characters` - 创建新的角色设定
-- **更新角色**: `PUT /settings/characters/:id` - 更新指定角色设定
-- **删除角色**: `DELETE /settings/characters/:id` - 删除角色设定（带项目关联检查）
-- **关联项目**: `GET /settings/characters/:id/projects` - 获取角色关联的项目列表
-
-技术实现：
-
-- 使用NestJS Controller和Service架构
-- 基于JWT认证，自动获取当前用户ID
-- Prisma ORM查询，使用正确的类型系统（`Prisma.character_settingsCreateInput` 等）
-- 完整的权限校验，确保用户只能操作自己的数据
-- 智能删除保护：删除前检查项目关联，如有关联则拒绝删除并返回项目名称
-- 完整的Swagger API文档和类型定义
-- 按创建时间倒序排列，返回最新设定优先
-- 通过所有TypeScript类型检查和ESLint验证
-
-**注意事项**：
-
-- API需要JWT认证，请确保请求头包含有效token
-- 返回数据为空数组时，可能是数据库中没有对应用户的设定数据
-- 删除角色时，如果有项目关联该角色（projects.characters 字段包含角色ID），将返回400错误
-- ✅ **字段映射已修复**: 前端表单字段与数据库schema完全一致，删除了不存在的 `specialMarks` 字段
-- ✅ **类型安全**: 所有接口通过TypeScript严格类型检查，使用 `remarks` 字段存储备注
-- 建议先通过前端或数据库工具创建一些测试数据验证功能
-
-**前端页面完整功能** ✅ **已全部对接并测试通过**
-
-角色设定列表页面 (`/settings/library/characters`) 已完成：
-
-1. **数据加载**:
-   - 自动从后端API加载角色列表
-   - 支持按分类动态切换数据
-   - 完整的loading状态管理
-
-2. **创建功能**: ✅ **已完善**
-   - 点击"新建角色设定"按钮打开创建对话框
-   - 填写完整表单并保存
-   - 成功后显示toast提示
-   - 对话框关闭时自动刷新列表
-   - 字段验证与数据库schema完全对应
-
-3. **编辑功能**:
-   - 点击卡片上的编辑按钮
-   - 打开预填充数据的编辑对话框
-   - 修改后保存成功显示提示
-   - 对话框关闭时自动刷新列表
-
-4. **删除功能**:
-   - 点击删除按钮显示确认弹窗
-   - 确认后调用删除API
-   - 成功后显示提示并刷新列表
-   - 后端检查项目关联，有关联时拒绝删除
-
-5. **UI特性**: ✅ **已完善**
-   - 统一的卡片样式和操作按钮
-   - 日期格式化显示
-   - 标签动态展示
-   - 支持列表/网格视图切换
-   - 完整的筛选和搜索功能
-   - 新增按钮正常显示和交互
-   - 所有类型检查和lint规则通过
-
-**质量保证** ✅ **已完成**
-
-- ✅ **代码质量**: 通过所有ESLint和Prettier检查
-- ✅ **类型安全**: 通过所有TypeScript类型检查
-- ✅ **字段对齐**: 前后端字段映射完全一致
-- ✅ **错误处理**: 完善的错误提示和降级机制
-- ✅ **性能优化**: 使用React最佳实践避免不必要的重渲染
-
-**系统设定弹框** (`SystemDialog`)
-
-已实现完整的系统/金手指设定创建/编辑弹框，包含：
-
-- **基础信息**: 系统名称、类型、描述等必填字段
-- **系统类型**: 17种预设类型（升级、签到、抽奖、商城、任务、成就、修炼、战斗、装备、技能、天赋、属性、合成、副本、公会、宠物、其他）
-- **功能模块**: 支持添加多个功能模块，每个模块包含名称、描述、运作机制、触发条件、限制约束
-- **等级体系**: 支持定义等级名称、等级描述、升级条件、等级效果
-- **道具装备**: 支持管理道具信息，包含名称、分类（9种预设分类）、描述、属性效果、获取途径
-- **数值参数**: 支持配置系统相关的数值和公式，包含参数名称、参数值、参数描述
-- **运作规则**: 系统的整体运作规则描述
-- **触发条件**: 系统激活或响应的条件设定
-- **限制约束**: 系统使用的限制和约束条件
-- **动态管理**: 所有子模块都支持动态添加、编辑、删除操作
-- **响应式设计**: 桌面端和移动端自适应布局
-- **表单验证**: 使用Zod进行完整的数据验证
-
-#### 核心功能模块
-
-**角色设定** (`/settings/[projectId]/characters`)
-
-- **基础信息**: 姓名、年龄、性别、身份、职业
-- **外貌描述**: 相貌特征、身材体型、着装风格、标志性特征
-- **性格特点**: 性格标签、说话方式、行为习惯、价值观念
-- **背景故事**: 出身来历、成长经历、重要事件、关系网络
-- **能力设定**: 实力等级、特殊技能、武器装备、战斗风格
-
-**系统/金手指** (`/settings/[projectId]/systems`)
-
-- **系统类型**: 升级系统、签到系统、抽奖系统、商城系统等
-- **功能机制**: 运作规则、触发条件、限制约束
-- **等级体系**: 境界划分、升级条件、经验获取方式
-- **道具装备**: 物品分类、属性效果、获取途径
-- **数值设定**: 各种参数配置、公式计算
-
-**世界背景** (`/settings/[projectId]/worlds`)
-
-- **世界设定**: 时代背景、地理环境、气候条件
-- **势力组织**: 门派宗教、家族氏族、国家政权、商业组织
-- **修炼体系**: 功法分级、修炼境界、突破条件
-- **历史脉络**: 重大事件、历史人物、时间线梳理
-- **文化风俗**: 社会制度、生活方式、语言文字
-
-**世界设定弹框** (`WorldDialog` - ✅ 已完成)
-
-已实现完整的世界设定创建/编辑弹框，基于推荐的分类模块方案，包含：
-
-- **基础信息**: 世界名称、类型、时代背景、描述等必填字段
-- **世界类型**: 12种预设类型（奇幻、修仙、现代都市、历史架空、科幻、末世、武侠、魔法、蒸汽朋克、赛博朋克、上古洪荒、其他）
-- **地理环境**: 支持添加多个重要地点，包含地点名称、类型（15种预设）、描述、气候、地形、特殊特征
-- **政治势力**: 支持管理政治势力，包含势力名称、类型（13种预设）、描述、控制区域、领导结构、核心理念、实力等级、对外关系
-- **文化体系**: 支持添加文化习俗，包含习俗名称、分类（10种预设）、描述、起源、意义、具体做法
-- **修炼/力量体系**: 支持定义修炼境界，包含境界名称、等级序号、描述、突破条件、境界能力、寿命影响、所需资源
-- **历史脉络**: 支持管理历史事件和历史人物
-  - 历史事件：事件名称、时间段、描述、参与者、起因、后果、历史意义
-  - 历史人物：人物姓名、称号、所处时代、描述、主要成就、背景故事、历史影响
-- **动态管理**: 所有子模块都支持动态添加、编辑、删除操作
-- **响应式设计**: 桌面端和移动端自适应布局
-- **表单验证**: 使用Zod进行完整的数据验证
-- **集成完成**: 已集成到设定库世界背景分类页面
-
-考虑到世界设定的复杂性和多样性，分析了四种设计方案：
-
-_方案一：分层级结构方案_
-
-- **结构**: 世界总览 → 大陆/星球 → 国家/王国 → 地区/省份 → 城市/据点
-- **优点**: 层次清晰，适合大型复杂世界观，支持多大陆多文明设定
-- **缺点**: 对简单世界观过于复杂，层级深度可能导致操作繁琐
-- **适用**: 玄幻、奇幻类大型世界观
-
-_方案二：分类模块方案_ ⭐ **已采用方案**
-
-- **结构**: 基础信息 | 地理环境 | 政治势力 | 文化体系 | 修炼/力量体系 | 历史脉络
-- **优点**: 模块化设计易于理解，适合多种题材，可选择性填写，扩展性好
-- **缺点**: 信息可能重复，某些特殊题材适配性待优化
-- **适用**: 通用性强，适合玄幻、都市、科幻、历史等各种题材
-
-_方案三：时间线导向方案_
-
-- **结构**: 远古时期 → 古代时期 → 近代时期 → 当前时代，关联空间设定
-- **优点**: 历史脉络清晰，适合历史厚重的设定，便于理解世界演变
-- **缺点**: 对现代/未来题材不够直观，填写门槛较高
-- **适用**: 历史、架空历史、有深厚背景的玄幻题材
-
-_方案四：势力中心方案_
-
-- **结构**: 主要势力 → 中立区域 → 跨势力设定，以势力为核心展开
-- **优点**: 适合势力斗争主线，便于管理复杂势力关系，符合网文常见模式
-- **缺点**: 可能忽略自然环境，对个人冒险类故事不够适用
-- **适用**: 修仙、武侠、权谋类小说
-
-**推荐实现**: 采用方案二（分类模块方案）作为主体架构，原因：
-
-1. 通用性强，适合各种题材
-2. 模块化结构，新手易上手
-3. 灵活性高，支持选择性填写
-4. 扩展性好，可根据需求增加模块
-
-具体模块设计：
-
-- **基础信息**: 世界名称、类型、时代背景、整体描述
-- **地理环境**: 地形地貌、气候条件、重要地点、地理图谱
-- **政治势力**: 国家政权、门派宗教、家族氏族、商业组织、势力关系
-- **文化体系**: 社会制度、生活方式、语言文字、宗教信仰、节日习俗
-- **修炼/力量体系**: 功法分级、修炼境界、突破条件、修炼资源、战力评估
-- **历史脉络**: 重大事件、关键节点、历史人物、传说故事、时间线管理
-
-**辅助设定弹框** (`MiscDialog` - ✅ 已完成)
-
-已实现完整的辅助设定创建/编辑弹框，基于创作工具集方案，包含：
-
-- **基础信息**: 辅助设定名称、类型、描述等必填字段
-- **辅助设定类型**: 7种预设类型（创作工具集、灵感收集、参考资料库、术语词典、模板库、项目笔记、其他类型）
-- **灵感记录**: 支持添加多个灵感记录，包含标题、类型（9种预设）、内容、来源、优先级、状态、相关章节
-- **参考资料**: 支持管理参考资料，包含标题、类型（9种预设）、链接地址、文件路径、描述、标签、来源
-- **创作笔记**: 支持添加创作笔记，包含标题、类型（8种预设）、内容、相关章节、重要程度、最后修改时间
-- **专业术语**: 支持术语管理，包含术语名称、分类（11种预设）、术语解释、发音读音、使用场景、使用示例、相关术语
-- **模板库**: 支持模板管理，包含模板名称、类型（8种预设）、模板内容、描述、可变参数说明、标签、使用次数
-- **项目标签**: 支持标签管理，包含标签名称、分类（9种预设）、描述、标签颜色、关联内容、使用次数
-- **动态管理**: 所有子模块都支持动态添加、编辑、删除操作
-- **响应式设计**: 桌面端和移动端自适应布局
-- **表单验证**: 使用Zod进行完整的数据验证
-- **集成完成**: 已集成到设定库辅助设定分类页面
-
-**辅助设定** (`/settings/[projectId]/misc`)
-
-采用创作工具集方案，提供创作过程中的实用工具：
-
-- **灵感记录**: 零散想法、创意片段、剧情灵感、梗概草稿
-- **参考资料**: 图片素材、文档资料、网页链接、音频视频
-- **创作笔记**: 章节大纲草稿、人物关系图、情节线索
-- **专业术语**: 行业黑话、专业词汇、技能名称、道具名称
-- **模板库**: 常用桥段、剧情模板、对话模板
-- **项目标签**: 自定义项目相关的标签分类
-
-#### 核心特性
-
-**项目关联管理**
-
-- 支持双重架构：项目关联设定 + 独立设定库
-- 项目关联设定：强绑定到具体小说项目，便于项目管理
-- 独立设定库：跨项目复用，避免重复创建相似设定
-- 支持小说项目选择器，快速切换查看不同项目的设定
-- 支持后期调整设定的项目关联关系
-- 提供项目设定统计概览（角色数、系统数等）
-
-**模板化创建**
-
-- 为不同设定类型提供预设模板
-- 角色模板：主角、配角、反派、路人等
-- 系统模板：升级、签到、商城、抽奖等
-- 创建时自动关联到当前选中的小说项目
-
-**智能关联系统**
-
-- **@ 引用功能**: 在大纲/正文编辑时输入 @ 触发设定搜索
-- **范围限制**: @ 搜索可选择项目关联设定或设定库
-- **自动插入**: 选择设定后自动插入 `[@设定名](moge://type/id)` 格式链接
-- **双向关联**: 设定详情页显示所有引用该设定的大纲/章节位置
-
-**AI 生成增强**
-
-- 生成大纲时自动获取项目关联的所有设定作为上下文
-- 支持设定摘要注入，提升 AI 生成内容的一致性
-- 智能识别相关设定，优先使用高相关度的设定信息
-- 生成结果自动解析并建立 @ 引用关系
-
-**关系链接**
-
-- 角色间的关系图谱展示
-- 设定间的引用关系管理
-- 设定使用频次统计和热度分析
-- 项目内设定的关联度可视化
-
-**视图模式**
-
-- **项目切换栏**: 顶部显示当前项目选择器和设定统计
-- **卡片视图**: 适合浏览概览，突出图片和核心信息
-- **表格视图**: 适合数据对比，支持排序和高级筛选
-- **详情视图**: 完整信息展示，支持富文本编辑
-
-**搜索筛选**
-
-- 按类型、标签、创建时间等维度筛选
-- 全文搜索设定内容和关键词
-- 项目关联设定：限制当前项目范围
-- 独立设定库：支持跨项目搜索
-- 收藏夹和常用设定快速访问
-- 支持跨项目设定复制和导入
-
-**数据管理**
-
-- 设定导出为 JSON/Markdown 格式
-- 支持设定模板保存和复用
-- 设定版本历史和回滚功能
-- 批量操作：标签管理、项目迁移等
-
-#### 界面展示设计
-
-**标签页内容布局**
-
-- **工具栏区域**: 搜索框、标签筛选、排序选择、新建按钮
-- **视图切换**: 卡片视图、列表视图两种模式
-- **内容展示**: 根据视图模式展示设定列表
-- **分页控件**: 支持大量设定的分页浏览
-
-**两种视图模式**
-
-- **卡片视图**: 网格布局，显示设定卡片，适合浏览概览
-  - 桌面端 4 列，平板端 2-3 列，手机端 1 列
-  - 显示名称、摘要、标签、操作菜单
-  - 支持拖拽排序和批量选择
-- **列表视图**: 紧凑列表，显示核心信息，适合快速查看
-  - 头像、名称、摘要、标签、快捷操作按钮
-  - 适合在有限空间内浏览大量设定
-  - 每行显示完整信息，操作更直观
-
-**搜索筛选功能**
-
-- **搜索框**: 支持设定名称、描述内容的全文搜索
-- **标签筛选**: 多选标签，支持 AND/OR 逻辑筛选
-- **排序方式**: 按名称、创建时间、更新时间、使用频次排序
-- **高级筛选**: 按设定类型、项目关联、收藏状态等筛选
-
-**空状态处理**
-
-- 针对不同设定类型显示对应的空状态提示
-- 提供快速创建入口和使用指导
-- 显示创建建议和模板推荐
-
-**响应式适配**
-
-- 桌面端：完整功能和多列布局
-- 平板端：简化工具栏，适中的列数
-
-**子路由结构**: 采用 `settings/characters/[id]` 清晰层级，分离"主页"、"列表页"和"详情页"
-
-### 5. `字典管理` (/dictionary) 模块 ✅ **全功能已完成**
-
-作为全局数据字典管理中心，维护系统级的标准化数据：
-
-#### ✅ 已完成功能
-
-**基础架构**
-
-- **路由结构**: 完整的字典管理路由架构 (`/dictionary`, `/dictionary/[category]`)
-- **菜单集成**: 已集成到主导航菜单中，使用Database图标
-- **类型定义**: 完整的字典相关TypeScript类型和Zod schemas
-- **响应式设计**: 桌面端和移动端自适应布局
-- **UI风格统一**: 卡片样式与应用其他模块完全一致
-
-**主页面** (`/dictionary`)
-
-- **统计概览**: 3个核心指标卡片（分类总数、词条总数、使用频次）
-- **分类导航**: 4个主要分类的卡片导航（小说类型、小说标签、专业术语、模板库）
-- **交互体验**: 标准化的hover效果和过渡动画
-- **简洁设计**: 移除了复杂的快速操作，专注核心功能
-
-**分类详情页** (`/dictionary/[category]`)
-
-- **面包屑导航**: 清晰的层级导航结构
-- **筛选系统**: 集成MogeFilter组件，支持搜索、状态筛选、排序
-- **列表展示**: 使用MogeList组件展示词条，支持分页
-- **词条卡片**: 显示标签、编码、状态、描述等完整信息，移除排序字段显示
-- **操作功能**: 新建词条按钮和完整的CRUD操作
-- **滚动功能**: 支持列表内容滚动，头部固定
-- **视图切换**: 列表/网格视图切换，与大纲页面逻辑一致
-
-**词条管理对话框** (`DictItemDialog` - ✅ 已完成)
-
-已实现完整的字典词条创建/编辑对话框，包含：
-
-- **基础信息**: 词条编码、显示标签、存储值等必填字段
-- **排序管理**: 支持自定义排序序号
-- **状态控制**: 启用/禁用状态切换
-- **描述信息**: 支持详细描述字段（可选）
-- **表单验证**: 使用Zod进行完整的数据验证
-- **集成完成**: 已集成到字典分类页面
-- **操作反馈**: 创建/编辑成功后显示提示信息
-
-**完整CRUD功能** ✅ **已完成**
-
-- **创建词条**: 完整的新建词条功能，支持所有字段
-- **编辑词条**: 支持编辑现有词条的所有信息
-- **删除词条**: 带确认提示的删除功能
-- **状态切换**: 一键启用/禁用词条状态
-- **批量操作**: 支持批量管理词条状态
-
-**后端API实现** ✅ **已完成**
-
-完整的RESTful API接口：
-
-- `GET /dict?type=xxx` - 按类型查询字典数据
-- `POST /dict` - 创建新词条
-- `PUT /dict/:id` - 更新词条信息
-- `DELETE /dict/:id` - 删除词条
-- `PATCH /dict/:id/toggle` - 切换词条状态
-
-**技术实现**
-
-- **数据结构**: 基于后端Prisma schema (dict_categories, dict_items) 设计前端类型
-- **组件复用**: 使用MogeFilter、MogeList等现有组件确保UI一致性
-- **类型安全**: 完整的TypeScript类型定义，解决命名冲突问题
-- **质量保证**: 通过所有TypeScript类型检查和ESLint验证
-- **错误处理**: 移除多余的toast错误提示，使用全局错误处理机制
-- **代码质量**: 所有代码通过lint检查，符合项目规范
-
-**数据库集成**
-
-- **Prisma Schema**: 已更新schema，增加description字段支持
-- **类型兼容**: description字段设为可选，兼容旧数据
-- **待迁移**: 数据库migration由用户手动执行
-
-#### 🔄 待开发功能
-
-**核心功能模块**
-
-**小说类型管理** (`/dictionary/novel-types`)
-
-- **预设类型**: 玄幻、都市、历史、科幻、军事、游戏、体育、现实、悬疑、轻小说等
-- **自定义类型**: 支持用户添加个性化小说类型
-- **类型描述**: 为每个类型提供详细说明和特点描述
-- **使用统计**: 显示各类型的使用频次和流行趋势
-
-**小说标签库** (`/dictionary/novel-tags`) ✅ **基础功能已完成**
-
-- **后端API支持**: 已实现完整的字典分类和字典项CRUD API
-  - `GET /dict/categories` - 获取所有字典分类
-  - `POST /dict/categories` - 创建字典分类
-  - `PUT /dict/categories/:id` - 更新字典分类
-  - `DELETE /dict/categories/:id` - 删除字典分类
-  - 字典项API保持不变，支持完整CRUD操作
-- **数据库分类**: 已创建必要的字典分类
-  - novel_types (小说类型) - 已有15个类型词条，全部带描述
-  - novel_tags (小说标签) - 新建分类，已开始创建真实标签
-  - terminology (专业术语) - 新建分类
-  - templates (模板库) - 新建分类
-- **标签数据**: 已开始创建真实的网络小说标签
-  - 穿越 - 主角穿越到不同的时空、世界或身体中的题材
-  - 重生 - 主角回到过去重新开始人生的题材
-  - 系统 - 主角拥有系统金手指辅助的题材
-- **前端界面**: 字典管理页面已支持所有分类的完整CRUD操作
-
-**🔄 待完成功能**
-
-- ✅ **分类管理**: 已按照不同维度完成标签分类管理
-  - 题材标签：穿越✅、重生✅、系统✅、修真✅、异能✅、末世✅、都市✅、历史✅、科幻✅、武侠✅、游戏✅、女频向✅
-  - 风格标签：热血✅、爽文✅、虐文✅、轻松✅、搞笑✅、治愈✅
-  - 情节标签：复仇✅、成长✅、争霸✅、探险✅、恋爱✅、商战✅
-  - 角色标签：废材流✅、天才流✅、老怪流✅、女强✅、男强✅
-- **标签关联**: 建立标签间的关联关系和推荐组合
-- **热度排行**: 显示标签使用频次和流行趋势
-- **智能推荐**: 基于项目类型推荐合适的标签组合
-
-**专业术语库** (`/dictionary/terminology`) ✅ **已完成数据创建**
-
-- ✅ **完整数据库**: 已创建40+个真实专业术语
-- ✅ **分类覆盖**: 网络小说、修仙、古代官职、建筑、武侠、现代网络用语、科幻等7大类
-- ✅ **SQL文件**: 提供terminology_data.sql一键导入脚本
-- **专业术语**: 各行业专业词汇、技术名词
-- **古风词汇**: 古代官职、建筑、服饰、礼仪用词
-- **现代词汇**: 网络用语、流行词汇、行业黑话
-- **外语词汇**: 常用外语词汇及音译对照
-
-**模板库** (`/dictionary/templates`) ✅ **已完成数据创建**
-
-- ✅ **完整模板库**: 已创建40个实用写作模板
-- ✅ **分类完整**: 角色、情节、叙述技巧、情感氛围4大类模板
-- ✅ **SQL文件**: 提供templates_data.sql一键导入脚本
-- **角色模板**: 主角、配角、反派等角色模板预设
-- **系统模板**: 各类金手指系统的标准模板
-- **世界模板**: 不同题材的世界观模板
-- **情节模板**: 常见剧情桥段和故事结构模板
-
-#### 核心特性
-
-**分级权限管理**
-
-- **系统级**: 平台预设的标准数据，只有管理员可修改
-- **用户级**: 用户自定义的个人词汇和标签
-- **项目级**: 特定项目的专属术语和标签
-
-**数据同步与共享**
-
-- **导入导出**: 支持批量导入/导出字典数据
-- **社区共享**: 优质用户字典可以分享给其他用户
-- **版本控制**: 字典数据的版本管理和回滚功能
-- **自动更新**: 系统级字典的自动更新机制
-
-**智能辅助功能**
-
-- **自动补全**: 在创作过程中提供智能词汇补全
-- **语义检查**: 检测用词的准确性和一致性
-- **关联推荐**: 基于上下文推荐相关词汇和标签
-- **使用统计**: 个人词汇使用习惯分析
-
-### 6. `统计` (/stats) 模块
-
-- **深度分析**: 提供独立、强大的数据分析功能。
-- **功能**: 支持按时间范围（本周、本月、本年）查看详细的字数趋势图、项目贡献度分析、写作活跃时间分布等。
-
----
-
-## 第五部分：全局核心系统规划
-
-### 字典管理与设定集的协同设计
-
-**数据层级关系**:
-
-- **字典管理**: 维护全局标准化数据（小说类型、通用标签、模板等）
-- **设定集**: 使用字典数据，并可扩展项目专属内容
-- **协同机制**: 设定集中的标签选择器从字典管理获取选项，支持快速添加自定义标签
-
-**典型使用流程**:
-
-1. 在字典管理中维护小说类型和标签库
-2. 创建项目时从字典中选择类型和基础标签
-3. 在设定集中创建角色/系统/世界时，标签选择器自动加载相关词汇
-4. 支持在设定创建过程中临时添加新词汇，可选择是否加入个人字典
-
-### `@` 智能引用系统
-
-这是打通所有模块、提升产品价值的核心系统。
-
-- **目标**: 实现 `设定集`、`大纲`、`正文` 之间的无缝链接。
-- **核心流程**:
-  1.  **触发与插入**: 在任何编辑器中输入 `@`，触发全局设定搜索，选择后插入一个包含唯一ID的稳定链接（如 `[@风雪城](moge://item/uuid-xxx)`）。
-  2.  **悬浮与跳转**: 在阅读时，鼠标悬浮于 `@链接` 上可预览设定简介卡片；点击则直接跳转至该设定的详情页。
-  3.  **反向链接**: 在设定的详情页，能自动展示所有引用了该设定的“出场章节”列表。
-- **技术要点**: 需要后端提供统一搜索接口、前端实现编辑器插件和 Markdown 自定义渲染组件。
-
----
-
-## 第六部分：实施策略建议
-
-建议采用分阶段、迭代的方式进行开发：
-
-1.  **第一阶段 (基础建设)**:
-    - 搭建 `文稿` 和 `设定集` 模块的基础页面和路由结构。
-    - 实现 `设定集` 的项目关联功能：项目选择器、设定与项目的绑定关系。
-    - 实现 `设定集` 模块的模板化创建和列表/表格视图功能。
-    - 实现 `文稿` 模块的列表及状态管理。
-
-2.  **第二阶段 (核心价值)**:
-    - 实现 `@` 智能引用系统的 MVP 版本（项目范围内的搜索、插入和点击跳转）。
-    - 实现 AI 生成时的设定上下文注入功能。
-    - 实现 `工作台` 的"最近项目"和"统计概览"模块。
-
-3.  **第三阶段 (体验增强)**:
-    - 为 `@` 系统增加悬浮预览卡片和反向链接功能。
-    - 实现设定使用统计和关联度分析。
-    - 完善独立的 `统计` 页面，提供深度数据分析。
-    - 完成 `工作台` 的其余模块。
+请直接查阅 `docs` 目录下的相关文件以获取最新信息。
